exports[`Custom XPath functions can be registered 1`] = `
<rendering-container>
  <x>
    <x-ok>
      <x />
    </x-ok>
  </x>
</rendering-container>
`;

exports[`Modes are usable to render out-of-order 1`] = `
<rendering-container>
  <x>
    <x>
      once
    </x>
    <x>
      <x-ok />
    </x>
  </x>
</rendering-container>
`;

exports[`Modes fall back to the default mode for unregistered nodes 1`] = `
<rendering-container>
  <x>
    <x-ok />
  </x>
</rendering-container>
`;

exports[`Modes reset traversal mode to default 1`] = `
<rendering-container>
  <x>
    <x>
      <x-ok>
        <x-ok />
      </x-ok>
    </x>
  </x>
</rendering-container>
`;

exports[`Modes traverse in the same mode per default 1`] = `
<rendering-container>
  <x>
    <x>
      <x>
        <x-ok />
      </x>
    </x>
  </x>
</rendering-container>
`;

exports[`Rendering for comments 1`] = `
<rendering-container>
  <x>
     OK 
  </x>
</rendering-container>
`;

exports[`Rendering for elements 1`] = `
<rendering-container>
  <x-ok />
</rendering-container>
`;

exports[`Rendering for nested structures 1`] = `
<rendering-container>
  <x>
    <x-ok />
  </x>
</rendering-container>
`;

exports[`Rendering for processing instructions 1`] = `
<rendering-container>
  <x>
    OK
  </x>
</rendering-container>
`;

exports[`Rendering for text 1`] = `<rendering-container />`;

exports[`Traversal based on a relative XPath query 1`] = `
<rendering-container>
  <x>
    <x-ok>
      OK
    </x-ok>
  </x>
</rendering-container>
`;

exports[`test Will use the most specific selector 1`] = `
<rendering-container>
  <x-ok />
</rendering-container>
`;
